--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 
     <!-- Profile Section -->
 <div class="profile-section">
+    <!-- Navigation Menu -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="index.html" class="logo">YourSite</a>
+            <ul class="nav-links">
+                <li><a href="index.html" id="home-link">Home</a></li>
+                <li><a href="settings.html" id="settings-link">Settings</a></li>
+                <li><a href="merch.html" id="merch-link">Merch Store</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="profile-pic-wrapper">
         <!-- Settings Button -->
         <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
