--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
     <!-- Navigation Menu -->
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="index.html" class="logo">YourSite</a>
+            <a href="index.html" class="logo">Bus Army Dude's Page</a>
             <ul class="nav-links">
                 <li><a href="index.html" id="home-link">Home</a></li>
-                <li><a href="settings.html" id="settings-link">Settings</a></li>
                 <li><a href="merch.html" id="merch-link">Merch Store</a></li>
             </ul>
         </div>
