--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Navigation Menu -->
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="index.html" class="logo">Bus Army Dude's Page</a>
+            <a href="index.html" class="logo">Bus Army Dude's Profile</a>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Home</a></li>
                 <li><a href="merch.html" class="nav-item">Merch Store</a></li>
