--- a/index.html
+++ b/index.html
@@ -443,12 +443,12 @@
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (38.3%)</li>
-                            <li>CSS (24.3%)</li>
-                            <li>HTML (37.4%)</li>
+                            <li>JavaScript (45.2%)</li>
+                            <li>CSS (29.3%)</li>
+                            <li>HTML (25.5%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: January 28th, 2025 20:10:38 UTC</li>
+                    <li>Last Updated: February 11th, 2025 11:53 AM EST</li>
                 </ul>
             </div>
         </div>
