--- a/settings.html
+++ b/settings.html
@@ -89,6 +89,69 @@
                     </div>
                 </div>
 
+                <!-- Shoutout Section Toggles -->
+<div class="settings-subsection">
+    <h2 class="subsection-title">Shoutout Section Settings</h2>
+
+    <!-- TikTok Shoutouts -->
+    <div class="setting-card">
+        <div class="setting-label">
+            <h3 class="setting-title">TikTok Shoutouts</h3>
+            <p class="setting-description">Enable or disable TikTok shoutouts</p>
+        </div>
+        <label class="toggle-switch">
+            <input type="checkbox" id="toggleTikTokShoutouts">
+            <span class="toggle-slider"></span>
+        </label>
+        <select id="tiktokRegions" multiple>
+            <option value="us">United States</option>
+            <option value="uk">United Kingdom</option>
+            <option value="ca">Canada</option>
+            <option value="eu">European Union</option>
+            <!-- Add more regions as needed -->
+        </select>
+    </div>
+
+    <!-- Instagram Shoutouts -->
+    <div class="setting-card">
+        <div class="setting-label">
+            <h3 class="setting-title">Instagram Shoutouts</h3>
+            <p class="setting-description">Enable or disable Instagram shoutouts</p>
+        </div>
+        <label class="toggle-switch">
+            <input type="checkbox" id="toggleInstagramShoutouts">
+            <span class="toggle-slider"></span>
+        </label>
+        <select id="instagramRegions" multiple>
+            <option value="us">United States</option>
+            <option value="uk">United Kingdom</option>
+            <option value="ca">Canada</option>
+            <option value="eu">European Union</option>
+            <!-- Add more regions as needed -->
+        </select>
+    </div>
+
+    <!-- YouTube Shoutouts -->
+    <div class="setting-card">
+        <div class="setting-label">
+            <h3 class="setting-title">YouTube Shoutouts</h3>
+            <p class="setting-description">Enable or disable YouTube shoutouts</p>
+        </div>
+        <label class="toggle-switch">
+            <input type="checkbox" id="toggleYouTubeShoutouts">
+            <span class="toggle-slider"></span>
+        </label>
+        <select id="youtubeRegions" multiple>
+            <option value="us">United States</option>
+            <option value="uk">United Kingdom</option>
+            <option value="ca">Canada</option>
+            <option value="eu">European Union</option>
+            <!-- Add more regions as needed -->
+        </select>
+    </div>
+</div>
+
+                
                 <!-- Danger Zone Section -->
                 <div class="settings-subsection danger-zone">
                     <h2 class="subsection-title">Danger Zone</h2>
