--- a/settings.html
+++ b/settings.html
@@ -62,16 +62,18 @@
                 <!-- Owner Only Settings Section -->
                 <div class="settings-subsection owner-only">
                     <h2 class="subsection-title">Owner Only Settings</h2>
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Maintenance Mode</h3>
-                            <p class="setting-description">Put the site into maintenance mode for updates</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="maintenanceModeToggle" />
-                            <span class="toggle-slider"></span>
-                        </label>
+                    
+                <!-- Maintenance Mode -->
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Maintenance Mode</h3>
+                        <p class="setting-description">Put the site into maintenance mode for updates</p>
                     </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="maintenanceModeToggle" />
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
 
                     <!-- Profile Status -->
                     <div class="setting-card">
@@ -83,68 +85,6 @@
                             <option value="online">🟢 Online</option>
                             <option value="idle">🟡 Idle</option>
                             <option value="offline">🔘 Offline</option>
-                        </select>
-                    </div>
-                </div>
-
-                <!-- Shoutout Section Toggles -->
-                <div class="settings-subsection">
-                    <h2 class="subsection-title">Shoutout Section Settings</h2>
-
-                    <!-- TikTok Shoutouts -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">TikTok Shoutouts</h3>
-                            <p class="setting-description">Enable or disable TikTok shoutouts</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="toggleTikTokShoutouts">
-                            <span class="toggle-slider"></span>
-                        </label>
-                        <select id="tiktokRegions" multiple disabled>
-                            <option value="us">United States</option>
-                            <option value="uk">United Kingdom</option>
-                            <option value="ca">Canada</option>
-                            <option value="eu">European Union</option>
-                            <!-- Add more regions as needed -->
-                        </select>
-                    </div>
-
-                    <!-- Instagram Shoutouts -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Instagram Shoutouts</h3>
-                            <p class="setting-description">Enable or disable Instagram shoutouts</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="toggleInstagramShoutouts">
-                            <span class="toggle-slider"></span>
-                        </label>
-                        <select id="instagramRegions" multiple disabled>
-                            <option value="us">United States</option>
-                            <option value="uk">United Kingdom</option>
-                            <option value="ca">Canada</option>
-                            <option value="eu">European Union</option>
-                            <!-- Add more regions as needed -->
-                        </select>
-                    </div>
-
-                    <!-- YouTube Shoutouts -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">YouTube Shoutouts</h3>
-                            <p class="setting-description">Enable or disable YouTube shoutouts</p>
-                        </div>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="toggleYouTubeShoutouts">
-                            <span class="toggle-slider"></span>
-                        </label>
-                        <select id="youtubeRegions" multiple disabled>
-                            <option value="us">United States</option>
-                            <option value="uk">United Kingdom</option>
-                            <option value="ca">Canada</option>
-                            <option value="eu">European Union</option>
-                            <!-- Add more regions as needed -->
                         </select>
                     </div>
                 </div>
@@ -170,9 +110,8 @@
     <footer>
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
-
+    
     <!-- Scripts -->
     <script src="settings.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
