--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h2>TikTok Creator Shoutouts</h2>
         <p id="tiktok-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
     </div>
-    <div class="creator-grid" id="tiktok-creator-grid">
+    <div class="creator-grid"></div>
         <!-- TikTok creator cards will be dynamically generated here -->
     </div>
 </div>
@@ -160,7 +160,7 @@
         <h2>Instagram Creator Shoutouts</h2>
         <p id="instagram-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
     </div>
-    <div class="instagram-creator-grid" id="instagram-creator-grid">
+    <div class="instagram-creator-grid"></div>
         <!-- Instagram creator cards will be dynamically generated here -->
     </div>
 </div>
@@ -171,7 +171,7 @@
         <h2>YouTube Creator Shoutouts</h2>
         <p id="youtube-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
     </div>
-    <div class="youtube-creator-grid" id="youtube-creator-grid">
+    <div class="youtube-creator-grid"></div>
         <!-- YouTube creator cards will be dynamically generated here -->
     </div>
 </div>
