--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <div class="shoutouts-section section" id="tiktok-shoutouts-section">
     <div class="section-header">
         <h2>TikTok Creator Shoutouts</h2>
-        <p id="tiktok-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
+        <div id="lastUpdatedTimeTikTok">Last Updated: N/A</div>
     </div>
     <div class="creator-grid"></div>
         <!-- TikTok creator cards will be dynamically generated here -->
@@ -158,7 +158,7 @@
 <div class="shoutouts-section section" id="instagram-shoutouts-section">
     <div class="section-header">
         <h2>Instagram Creator Shoutouts</h2>
-        <p id="instagram-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
+        <div id="lastUpdatedTimeInstagram">Last Updated: N/A</div>
     </div>
     <div class="instagram-creator-grid"></div>
         <!-- Instagram creator cards will be dynamically generated here -->
@@ -169,7 +169,7 @@
 <div class="shoutouts-section section" id="youtube-shoutouts-section">
     <div class="section-header">
         <h2>YouTube Creator Shoutouts</h2>
-        <p id="youtube-last-updated-timestamp" class="last-updated">Last updated: N/A</p>
+        <div id="lastUpdatedTimeYouTube">Last Updated: N/A</div>
     </div>
     <div class="youtube-creator-grid"></div>
         <!-- YouTube creator cards will be dynamically generated here -->
