--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h2>TikTok Creator Shoutouts</h2>
         <div id="lastUpdatedTimeTikTok">Last Updated: N/A</div>
     </div>
-    <div class="creator-grid"></div>
+        <div class="tiktok-creator-grid"></div>
         <!-- TikTok creator cards will be dynamically generated here -->
     </div>
 </div>
@@ -160,7 +160,7 @@
         <h2>Instagram Creator Shoutouts</h2>
         <div id="lastUpdatedTimeInstagram">Last Updated: N/A</div>
     </div>
-    <div class="instagram-creator-grid"></div>
+        <div class="instagram-creator-grid"></div>
         <!-- Instagram creator cards will be dynamically generated here -->
     </div>
 </div>
@@ -171,7 +171,7 @@
         <h2>YouTube Creator Shoutouts</h2>
         <div id="lastUpdatedTimeYouTube">Last Updated: N/A</div>
     </div>
-    <div class="youtube-creator-grid"></div>
+        <div class="youtube-creator-grid"></div>
         <!-- YouTube creator cards will be dynamically generated here -->
     </div>
 </div>
