--- a/index.html
+++ b/index.html
@@ -143,38 +143,32 @@
 
         <div id="loading-spinner" class="spinner"></div>
         
-       <!-- TikTok Shoutouts Section -->
-<div class="shoutouts-section section">
-    <div id="tiktok-shoutouts">
-        <h2>TikTok Creator Shoutouts</h2>
-        <p id="tiktok-last-updated-timestamp"></p> <!-- Ensure the correct ID is here -->
-    </div>
+      <!-- TikTok Shoutout Section -->
+<section id="tiktok-shoutouts">
+    <h2>TikTok Shoutouts</h2>
     <div class="creator-grid">
-        <!-- Cards will be dynamically generated here -->
+        <!-- Creator cards will be dynamically populated here -->
     </div>
-</div>
+    <p id="tiktok-last-updated-timestamp">Last Updated: N/A</p>
+</section>
 
-<!-- Instagram Shoutouts Section -->
-<div class="shoutouts-section section">
-    <div id="instagram-shoutouts">
-        <h2>Instagram Creator Shoutouts</h2>
-        <p class="last-updated"><span id="instagram-last-updated-timestamp">N/A</span></p> <!-- Ensure the correct ID is here -->
+<!-- Instagram Shoutout Section -->
+<section id="instagram-shoutouts">
+    <h2>Instagram Shoutouts</h2>
+    <div class="creator-grid">
+        <!-- Creator cards will be dynamically populated here -->
     </div>
-    <div class="instagram-creator-grid">
-        <!-- Instagram creator cards will be dynamically generated here -->
-    </div>
-</div>
+    <p id="instagram-last-updated-timestamp">Last Updated: N/A</p>
+</section>
 
-<!-- YouTube Shoutouts Section -->
-<div class="shoutouts-section section">
-    <div id="youtube-shoutouts">
-        <h2>YouTube Creator Shoutouts</h2>
-        <p id="lastUpdatedYouTube"></p> <!-- Ensure the correct ID is here -->
+<!-- YouTube Shoutout Section -->
+<section id="youtube-shoutouts">
+    <h2>YouTube Shoutouts</h2>
+    <div class="creator-grid">
+        <!-- Creator cards will be dynamically populated here -->
     </div>
-    <div class="youtube-creator-grid">
-        <!-- YouTube creator cards will be dynamically generated here -->
-    </div>
-</div>
+    <p id="youtube-last-updated-timestamp">Last Updated: N/A</p>
+</section>
         
         <!-- Useful Links Section -->
     <div class="useful-links-section section">
