--- a/index.html
+++ b/index.html
@@ -144,31 +144,31 @@
         <div id="loading-spinner" class="spinner"></div>
         
       <!-- TikTok Shoutout Section -->
-<section id="tiktok-shoutouts">
-    <h2>TikTok Shoutouts</h2>
-    <div class="creator-grid">
-        <!-- Creator cards will be dynamically populated here -->
-    </div>
-    <p id="tiktok-last-updated-timestamp">Last Updated: N/A</p>
-</section>
+<div class="shoutout-section">
+  <h2>TikTok Shoutouts</h2>
+  <div class="creator-grid">
+    <!-- TikTok creator cards will be injected here -->
+  </div>
+  <p id="tiktok-last-updated-timestamp"></p>
+</div>
 
 <!-- Instagram Shoutout Section -->
-<section id="instagram-shoutouts">
-    <h2>Instagram Shoutouts</h2>
-    <div class="creator-grid">
-        <!-- Creator cards will be dynamically populated here -->
-    </div>
-    <p id="instagram-last-updated-timestamp">Last Updated: N/A</p>
-</section>
+<div class="shoutout-section">
+  <h2>Instagram Shoutouts</h2>
+  <div class="creator-grid">
+    <!-- Instagram creator cards will be injected here -->
+  </div>
+  <p id="instagram-last-updated-timestamp"></p>
+</div>
 
 <!-- YouTube Shoutout Section -->
-<section id="youtube-shoutouts">
-    <h2>YouTube Shoutouts</h2>
-    <div class="creator-grid">
-        <!-- Creator cards will be dynamically populated here -->
-    </div>
-    <p id="youtube-last-updated-timestamp">Last Updated: N/A</p>
-</section>
+<div class="shoutout-section">
+  <h2>YouTube Shoutouts</h2>
+  <div class="creator-grid">
+    <!-- YouTube creator cards will be injected here -->
+  </div>
+  <p id="youtube-last-updated-timestamp"></p>
+</div>
         
         <!-- Useful Links Section -->
     <div class="useful-links-section section">
