--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,8 @@
 </head>
 
 <body class="settings-page">
-    <div class="container">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <div class="container" role="main" id="main-content">
         <div class="settings-section">
             <div class="settings-header">
                 <h1>Settings</h1>
@@ -42,23 +43,36 @@
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
+                    <!-- Adjustable Text Size -->
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Text Size</h3>
+                            <p class="setting-description">Adjust the text size for better readability</p>
+                        </div>
+                        <label for="text-size">Text Size:</label>
+                        <select id="text-size" onchange="adjustTextSize(this.value)">
+                            <option value="default">Default</option>
+                            <option value="large">Large</option>
+                            <option value="larger">Larger</option>
+                        </select>
+                    </div>
                 </div>
 
                 <!-- Owner Only Settings Section -->
                 <div class="settings-subsection owner-only">
                     <h2 class="subsection-title">Owner Only Settings</h2>
                     
-                <!-- Maintenance Mode -->
-                <div class="setting-card">
-                    <div class="setting-label">
-                        <h3 class="setting-title">Maintenance Mode</h3>
-                        <p class="setting-description">Put the site into maintenance mode for updates</p>
+                    <!-- Maintenance Mode -->
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Maintenance Mode</h3>
+                            <p class="setting-description">Put the site into maintenance mode for updates</p>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="maintenanceModeToggle">
+                            <span class="toggle-slider"></span>
+                        </label>
                     </div>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="maintenanceModeToggle" />
-                        <span class="toggle-slider"></span>
-                    </label>
-                </div>
 
                     <!-- Profile Status -->
                     <div class="setting-card">
@@ -87,15 +101,24 @@
                 </div>
             </div>
 
-            <a href="index.html" class="back-link">← Back to Profile</a>
+            <a href="index.html" class="back-link" tabindex="0">← Back to Profile</a>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+        <a href="privacy-policy.html">Privacy Policy</a>
+        <a href="terms-of-service.html">Terms of Service</a>
+        <a href="accessibility-statement.html">Accessibility Statement</a>
     </footer>
-    
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-consent-banner">
+        <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
+        <button onclick="acceptCookies()">Accept</button>
+    </div>
+
     <!-- Scripts -->
     <script src="settings.js"></script>
 </body>
