--- a/settings.html
+++ b/settings.html
@@ -113,11 +113,11 @@
         <a href="accessibility-statement.html">Accessibility Statement</a>
     </footer>
 
-    <!-- Cookie Consent Banner -->
-    <div id="cookie-consent-banner">
-        <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
-        <button onclick="acceptCookies()">Accept</button>
-    </div>
+   <!-- Cookie Consent Banner -->
+<div id="cookie-consent-banner">
+    <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
+    <button id="accept-cookies-button">Accept</button>
+</div>
 
     <!-- Scripts -->
     <script src="settings.js"></script>
