--- a/settings.html
+++ b/settings.html
@@ -116,7 +116,7 @@
    <!-- Cookie Consent Banner -->
 <div id="cookie-consent-banner">
     <p>We use cookies to improve your experience. By using our site, you agree to our <a href="cookie-policy.html">cookie policy</a>.</p>
-    <button id="accept-cookies-button">Accept</button>
+    <button onclick="acceptCookies()">Accept</button>
 </div>
 
     <!-- Scripts -->
