--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Privacy Policy for Bus Army Dude's Profile">
     <title>Privacy Policy - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your site's CSS -->
+    <link rel="stylesheet" href="privacy.css"> <!-- Link to your site's CSS -->
 </head>
 <body>
     <main>
