--- a/accessibility-statement.html
+++ b/accessibility-statement.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Bus Army Dude">
     <title>Accessibility Statement - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="accessibility.css">
 </head>
 <body class="accessibility-statement-page">
     <div class="container">
