--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
     <meta http-equiv="refresh" content="300">
+    <script src="https://cdn.jsdelivr.net/npm/@statsig/js-client@3/build/statsig-js-client+session-replay+web-analytics.min.js?apikey=client-cca9CStgiZ3qM8AmKCz7nsWq858kUb11muq0paADTUu">
+
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
