--- a/index.html
+++ b/index.html
@@ -682,5 +682,6 @@
     <script src="events.js"></script>
     <script src="version.js"></script>
     <script src="creatorshoutouts.js"></script>
+    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>                
