--- a/settings.html
+++ b/settings.html
@@ -121,5 +121,6 @@
 
     <!-- Scripts -->
     <script src="settings.js"></script>
+    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>
