--- a/merchandise.html
+++ b/merchandise.html
@@ -6,6 +6,9 @@
     <title>Merchandise - Bus Army Dude's Store</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="merchandise.css">
+    <link rel="stylesheet" href="ai-features.css">
+    <link rel="stylesheet" href="settings.css">
+    <meta http-equiv="refresh" content="300">
 </head>
 <body>
     <header>
