--- a/merchandise.html
+++ b/merchandise.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merchandise - Bus Army Dude's Store</title>
+    <title>Merchandise - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="merchandise.css">
     <link rel="stylesheet" href="ai-features.css">
