--- a/merchandise.html
+++ b/merchandise.html
@@ -64,5 +64,10 @@
     </footer>
 
     <script src="merchandise.js"></script>
+    <script src="common.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>
