--- a/merchandise.html
+++ b/merchandise.html
@@ -26,7 +26,19 @@
                     <p class="price">$19.99</p>
                     <a href="product-link-1" class="buy-now">Buy Now</a>
                 </div>
-                <!-- Add more product items as needed -->
+                <!-- More Product Items -->
+                <div class="product-item">
+                    <img src="images/product4.jpg" alt="Product 4">
+                    <h3>Product Name 4</h3>
+                    <p class="price">$15.99</p>
+                    <a href="product-link-4" class="buy-now">Buy Now</a>
+                </div>
+                <div class="product-item">
+                    <img src="images/product5.jpg" alt="Product 5">
+                    <h3>Product Name 5</h3>
+                    <p class="price">$12.99</p>
+                    <a href="product-link-5" class="buy-now">Buy Now</a>
+                </div>
             </div>
         </section>
 
@@ -40,7 +52,19 @@
                     <p class="price">$24.99</p>
                     <a href="product-link-2" class="buy-now">Buy Now</a>
                 </div>
-                <!-- Add more product items as needed -->
+                <!-- More Product Items -->
+                <div class="product-item">
+                    <img src="images/product6.jpg" alt="Product 6">
+                    <h3>Product Name 6</h3>
+                    <p class="price">$29.99</p>
+                    <a href="product-link-6" class="buy-now">Buy Now</a>
+                </div>
+                <div class="product-item">
+                    <img src="images/product7.jpg" alt="Product 7">
+                    <h3>Product Name 7</h3>
+                    <p class="price">$34.99</p>
+                    <a href="product-link-7" class="buy-now">Buy Now</a>
+                </div>
             </div>
         </section>
 
@@ -54,7 +78,19 @@
                     <p class="price">$29.99</p>
                     <a href="product-link-3" class="buy-now">Buy Now</a>
                 </div>
-                <!-- Add more product items as needed -->
+                <!-- More Product Items -->
+                <div class="product-item">
+                    <img src="images/product8.jpg" alt="Product 8">
+                    <h3>Product Name 8</h3>
+                    <p class="price">$39.99</p>
+                    <a href="product-link-8" class="buy-now">Buy Now</a>
+                </div>
+                <div class="product-item">
+                    <img src="images/product9.jpg" alt="Product 9">
+                    <h3>Product Name 9</h3>
+                    <p class="price">$44.99</p>
+                    <a href="product-link-9" class="buy-now">Buy Now</a>
+                </div>
             </div>
         </section>
     </div>
@@ -64,7 +100,7 @@
     </footer>
 
     <script src="merchandise.js"></script>
-    <script src="common.js"></script>
+     <script src="common.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
