--- a/merchandise.html
+++ b/merchandise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchandise - Bus Army Dude's Profile</title>
-     <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="merchandise.css">
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
@@ -21,22 +21,25 @@
             <div class="product-grid">
                 <!-- Product Item -->
                 <div class="product-item">
+                    <div class="sale-ribbon">Sale</div>
                     <img src="images/product1.jpg" alt="Product 1">
                     <h3>Product Name 1</h3>
-                    <p class="price">$19.99</p>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
                     <a href="product-link-1" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
                 <div class="product-item">
+                    <div class="sale-ribbon">Sale</div>
                     <img src="images/product4.jpg" alt="Product 4">
                     <h3>Product Name 4</h3>
-                    <p class="price">$15.99</p>
+                    <p class="price"><span class="original-price">$20.99</span> $15.99 <span class="discount">(24% off)</span></p>
                     <a href="product-link-4" class="buy-now">Buy Now</a>
                 </div>
                 <div class="product-item">
+                    <div class="sale-ribbon">Sale</div>
                     <img src="images/product5.jpg" alt="Product 5">
                     <h3>Product Name 5</h3>
-                    <p class="price">$12.99</p>
+                    <p class="price"><span class="original-price">$16.99</span> $12.99 <span class="discount">(24% off)</span></p>
                     <a href="product-link-5" class="buy-now">Buy Now</a>
                 </div>
             </div>
@@ -99,7 +102,7 @@
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
-    <script src="merchandise.js"></script>
+   <script src="merchandise.js"></script>
     <script src="common.js"></script>
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
