--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -6,6 +6,11 @@
     <meta name="author" content="Bus Army Dude">
     <title>Terms of Service - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="terms.css">
+     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="merchandise.css">
+    <link rel="stylesheet" href="ai-features.css">
+    <link rel="stylesheet" href="settings.css">
+    <meta http-equiv="refresh" content="300">
 </head>
 <body class="terms-of-service-page">
     <div class="container">
@@ -35,5 +40,10 @@
             <p>If you have any questions or concerns about these Terms of Service, feel free to contact us via the contact form on the website.</p>
         </section>
     </div>
+    <script src="common.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>
