--- a/accessibility-statement.html
+++ b/accessibility-statement.html
@@ -6,6 +6,9 @@
     <meta name="author" content="Bus Army Dude">
     <title>Accessibility Statement - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="accessibility.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ai-features.css">
+    <link rel="stylesheet" href="settings.css">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
@@ -66,5 +69,10 @@
             <p>Some parts of our website may include third-party content or links. We are not responsible for the accessibility of third-party content, but we encourage these providers to offer accessible services.</p>
         </section>
     </div>
+    <script src="common.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>
