--- a/merchandise.html
+++ b/merchandise.html
@@ -41,6 +41,7 @@
 <body>
     <header>
         <h1>Bus Army Dude's Merchandise</h1>
+        <button class="home-button" onclick="window.location.href='index.html'">Home</button>
     </header>
 
     <div class="container">
