--- a/merchandise.html
+++ b/merchandise.html
@@ -46,11 +46,25 @@
         </div>
     </header>
 
+    <nav class="category-nav">
+        <ul>
+            <li><a href="#on-sale">On Sale</a></li>
+            <li><a href="#new-arrivals">New Arrivals</a></li>
+            <li><a href="#popular">Popular</a></li>
+            <li><a href="#all-products">All Products</a></li>
+            <li><a href="#accessories">Accessories</a></li>
+            <li><a href="#kids">Kids</a></li>
+            <li><a href="#home-living">Home & Living</a></li>
+            <li><a href="#men">Men</a></li>
+            <li><a href="#women">Women</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
         <section id="on-sale">
             <h2>On Sale</h2>
             <div class="product-grid">
-                <!-- Product Item In Stock -->
+                <!-- Example Product Item On Sale -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <div class="sale-ribbon">Sale</div>
@@ -60,32 +74,14 @@
                     <p class="quantity">Quantity: 50</p>
                     <a href="product-link-1" class="buy-now">Buy Now</a>
                 </div>
-                <!-- Product Item Low Stock -->
-                <div class="product-item">
-                    <div class="stock-ribbon low-stock">Low Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product4.jpg" alt="Product 4">
-                    <h3>Product Name 4</h3>
-                    <p class="price"><span class="original-price">$20.99</span> $15.99 <span class="discount">(24% off)</span></p>
-                    <p class="quantity">Quantity: 5</p>
-                    <a href="product-link-4" class="buy-now">Buy Now</a>
-                </div>
-                <!-- Product Item Out of Stock -->
-                <div class="product-item">
-                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
-                    <img src="images/product5.jpg" alt="Product 5">
-                    <h3>Product Name 5</h3>
-                    <p class="price"><span class="original-price">$16.99</span> $12.99 <span class="discount">(24% off)</span></p>
-                    <p class="quantity">Quantity: 0</p>
-                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
-                </div>
+                <!-- More Product Items On Sale -->
             </div>
         </section>
 
         <section id="new-arrivals">
             <h2>New Arrivals</h2>
             <div class="product-grid">
-                <!-- Product Item -->
+                <!-- Example New Arrival Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <img src="images/product2.jpg" alt="Product 2">
@@ -94,60 +90,124 @@
                     <p class="quantity">Quantity: 30</p>
                     <a href="product-link-2" class="buy-now">Buy Now</a>
                 </div>
-                <!-- More Product Items -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product6.jpg" alt="Product 6">
-                    <h3>Product Name 6</h3>
-                    <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 20</p>
-                    <a href="product-link-6" class="buy-now">Buy Now</a>
-                </div>
-                <div class="product-item">
-                    <div class="stock-ribbon low-stock">Low Stock</div>
-                    <img src="images/product7.jpg" alt="Product 7">
-                    <h3>Product Name 7</h3>
-                    <p class="price">$34.99</p>
-                    <p class="quantity">Quantity: 2</p>
-                    <a href="product-link-7" class="buy-now">Buy Now</a>
-                </div>
+                <!-- More New Arrival Product Items -->
             </div>
         </section>
 
         <section id="popular">
             <h2>Popular</h2>
             <div class="product-grid">
-                <!-- Product Item -->
+                <!-- Example Popular Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
                     <img src="images/product3.jpg" alt="Product 3">
                     <h3>Product Name 3</h3>
                     <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 15</p>
+                    <p class="quantity">Quantity: 20</p>
+                    <a href="product-link-3" class="buy-now">Buy Now</a>
+                </div>
+                <!-- More Popular Product Items -->
+            </div>
+        </section>
+
+        <section id="all-products">
+            <h2>All Products</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div>
+                    <img src="images/product1.jpg" alt="Product 1">
+                    <h3>Product Name 1</h3>
+                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
+                    <p class="quantity">Quantity: 50</p>
+                    <a href="product-link-1" class="buy-now">Buy Now</a>
+                </div>
+                <!-- More Product Items -->
+            </div>
+        </section>
+
+        <section id="accessories">
+            <h2>Accessories</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon low-stock">Low Stock</div>
+                    <img src="images/product2.jpg" alt="Product 2">
+                    <h3>Product Name 2</h3>
+                    <p class="price">$24.99</p>
+                    <p class="quantity">Quantity: 5</p>
+                    <a href="product-link-2" class="buy-now">Buy Now</a>
+                </div>
+                <!-- More Product Items -->
+            </div>
+        </section>
+
+        <section id="kids">
+            <h2>Kids</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="images/product3.jpg" alt="Product 3">
+                    <h3>Product Name 3</h3>
+                    <p class="price">$29.99</p>
+                    <p class="quantity">Quantity: 20</p>
                     <a href="product-link-3" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product8.jpg" alt="Product 8">
-                    <h3>Product Name 8</h3>
-                    <p class="price">$39.99</p>
-                    <p class="quantity">Quantity: 25</p>
-                    <a href="product-link-8" class="buy-now">Buy Now</a>
-                </div>
+            </div>
+        </section>
+
+        <section id="home-living">
+            <h2>Home & Living</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon out-of-stock">Out of Stock</div>
-                    <img src="images/product9.jpg" alt="Product 9">
-                    <h3>Product Name 9</h3>
-                    <p class="price"><span class="original-price">$44.99</span> <span class="discount">(Out of Stock)</span></p>
+                    <img src="images/product4.jpg" alt="Product 4">
+                    <h3>Product Name 4</h3>
+                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
                     <p class="quantity">Quantity: 0</p>
                     <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
                 </div>
+                <!-- More Product Items -->
             </div>
         </section>
-    </div>
 
-    <footer>
+        <section id="men">
+            <h2>Men</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
+                    <img src="images/product4.jpg" alt="Product 4">
+                    <h3>Product Name 4</h3>
+                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
+                    <p class="quantity">Quantity: 0</p>
+                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
+                </div>
+                <!-- More Product Items -->
+            </div>
+        </section>
+
+         <section id="women">
+            <h2>Women</h2>
+            <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
+                    <img src="images/product4.jpg" alt="Product 4">
+                    <h3>Product Name 4</h3>
+                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
+                    <p class="quantity">Quantity: 0</p>
+                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
+                </div>
+                <!-- More Product Items -->
+            </div>
+        </section>
+
+          <footer>
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
