--- a/merchandise.html
+++ b/merchandise.html
@@ -61,43 +61,16 @@
     </nav>
 
     <div class="container">
+        <!-- On Sale section -->
         <section id="on-sale">
             <h2>On Sale</h2>
             <div class="product-grid">
-                <!-- Example Product Item On Sale -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
-                </div>
-
-                 <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
-                </div>
-
-                 <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <div class="sale-ribbon">Sale</div>
-                    <img src="images/product1.jpg" alt="Product 1">
-                    <h3>Product Name 1</h3>
-                    <p class="price"><span class="original-price">$25.99</span> $19.99 <span class="discount">(23% off)</span></p>
-                    <p class="quantity">Quantity: 50</p>
-                    <a href="product-link-1" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Product Items On Sale -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently on sale. Check back later!</div>
         </section>
-
+        
         <section id="new-arrivals">
             <h2>New Arrivals</h2>
             <div class="product-grid">
