--- a/merchandise.html
+++ b/merchandise.html
@@ -108,81 +108,48 @@
         <section id="accessories">
             <h2>Accessories</h2>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon low-stock">Low Stock</div>
-                    <img src="images/product2.jpg" alt="Product 2">
-                    <h3>Product Name 2</h3>
-                    <p class="price">$24.99</p>
-                    <p class="quantity">Quantity: 5</p>
-                    <a href="product-link-2" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently in accessories. Check back later!</div>
         </section>
 
         <section id="kids">
             <h2>Kids</h2>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="images/product3.jpg" alt="Product 3">
-                    <h3>Product Name 3</h3>
-                    <p class="price">$29.99</p>
-                    <p class="quantity">Quantity: 20</p>
-                    <a href="product-link-3" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently in kids. Check back later!</div>
         </section>
 
         <section id="home-living">
             <h2>Home & Living</h2>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
-                    <img src="images/product4.jpg" alt="Product 4">
-                    <h3>Product Name 4</h3>
-                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
-                    <p class="quantity">Quantity: 0</p>
-                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently in home & living. Check back later!</div>
         </section>
 
         <section id="men">
             <h2>Men</h2>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
-                    <img src="images/product4.jpg" alt="Product 4">
-                    <h3>Product Name 4</h3>
-                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
-                    <p class="quantity">Quantity: 0</p>
-                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently in men. Check back later!</div>
         </section>
 
          <section id="women">
             <h2>Women</h2>
             <div class="product-grid">
                 <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon out-of-stock">Out of Stock</div>
-                    <img src="images/product4.jpg" alt="Product 4">
-                    <h3>Product Name 4</h3>
-                    <p class="price"><span class="original-price">$34.99</span> <span class="discount">(Out of Stock)</span></p>
-                    <p class="quantity">Quantity: 0</p>
-                    <button class="buy-now out-of-stock-button" disabled>Out of Stock</button>
-                </div>
-                <!-- More Product Items -->
+                   <div class="product-grid">
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products are currently in women. Check back later!</div>
         </section>
 
           <footer>
