--- a/merchandise.html
+++ b/merchandise.html
@@ -116,11 +116,18 @@
 
         <section id="kids">
             <h2>Kids</h2>
-            <div class="product-grid">
-                <!-- Product items go here -->
+             <div class="product-grid">
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
+                    <h3>Beanie Hat</h3>
+                    <p class="price">$17.48</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+                <!-- More Product Items -->
             </div>
-            <!-- Message for no products on sale -->
-            <div class="no-sale-message">No products are currently in kids. Check back later!</div>
         </section>
 
         <section id="home-living">
