--- a/merchandise.html
+++ b/merchandise.html
@@ -101,7 +101,7 @@
         <section id="all-products">
             <div class="section-header">
                 <h2>All Products</h2>
-                <span class="product-count">(1)</span>
+                <span class="product-count">(2)</span>
             </div>
             <div class="product-grid">
                 <!-- Example Product Item -->
@@ -112,6 +112,15 @@
                     <p class="price">$17.48</p>
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/onesie-organic-baby-bodysuit.jpg" alt="Product 2">
+                    <h3>Onesie® Organic Baby Bodysuit</h3>
+                    <p class="price">$27.83</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
                 <!-- More Product Items -->
             </div>
@@ -132,15 +141,24 @@
         <section id="kids">
             <div class="section-header">
                 <h2>Kids</h2>
-                <span class="product-count">(1)</span>
+                <span class="product-count">(2)</span>
              </div>
              <div class="product-grid">
                 <!-- Example Product Item -->
                 <div class="product-item">
                     <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
+                    <img src="product_images/onesie-organic-baby-bodysuit.jpg" alt="Product 2">
                     <h3>Beanie Hat</h3>
                     <p class="price">$17.48</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
+                </div>
+
+                 <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
+                    <h3>Onesie® Organic Baby Bodysuit</h3>
+                    <p class="price">$27.83</p>
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
