--- a/merchandise.html
+++ b/merchandise.html
@@ -140,6 +140,15 @@
                     <p class="quantity">Quantity: 999+</p>
                     <a href="https://rivers-merch-store.printify.me/product/13853306/infant-fine-jersey-tee?category=kids-clothing" class="buy-now">Buy Now</a>
                 </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/1-school-bus-driver-iphone-tough-case.jpg" alt="Product 5">
+                    <h3>#1 School Bus Driver iPhone Tough Case</h3>
+                    <p class="price">$15.99</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
+                </div>
                 <!-- More Product Items -->
             </div>
         </section>
@@ -147,13 +156,20 @@
         <section id="accessories">
             <div class="section-header">
                 <h2>Accessories</h2>
-                <span class="product-count">(0)</span>
+                <span class="product-count">(1)</span>
             </div>
             <div class="product-grid">
-                <!-- Product items go here -->
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/beanie-hat.jpg" alt="Product 5">
+                    <h3>#1 School Bus Driver iPhone Tough Case</h3>
+                    <p class="price">$15.99</p>
+                    <p class="quantity">Quantity: 999+</p>
+                    <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
+                </div>
+            <!-- More Product Items -->
             </div>
-            <!-- Message for no accessories products -->
-            <div class="no-sale-message">No products are currently in accessories. Check back later!</div>
         </section>
 
         <section id="kids">
