--- a/index.html
+++ b/index.html
@@ -676,6 +676,16 @@
         <p>© 2025 Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
+    <iframe 
+  src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
+  width="245" 
+  height="61" 
+  frameBorder="0" 
+  scrolling="no" 
+  style="border: none;"
+>
+</iframe>
+
     <!-- Scripts -->
     <script src="common.js"></script>
     <script src="script.js"></script>
@@ -684,6 +694,5 @@
     <script src="events.js"></script>
     <script src="version.js"></script>
     <script src="creatorshoutouts.js"></script>
-    <script src="https://busarmydudesprofile.statuspage.io/embed/script.js"></script>
 </body>
 </html>                
