--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
 
     <iframe 
   src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-  width="245" 
-  height="61" 
+  width="auto" 
+  height="auto" 
   frameBorder="0" 
   scrolling="no" 
   style="border: none;"
