--- a/merchandise.html
+++ b/merchandise.html
@@ -60,6 +60,16 @@
         </ul>
     </nav>
 
+    <iframe 
+              src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
+              width="auto" 
+              height="auto" 
+              frameBorder="0" 
+              scrolling="no" 
+              style="border: none;"
+            >
+          </iframe>
+    
     <div class="container">
         <!-- On Sale section -->
         <section id="on-sale">
