--- a/settings.html
+++ b/settings.html
@@ -115,10 +115,10 @@
 
     <iframe 
               src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-              width="auto" 
-              height="auto" 
+              width="230" 
+              height="61" 
               frameBorder="0" 
-              scrolling="no" 
+              scrolling="yes" 
               style="border: none;"
             >
           </iframe>
