--- a/merchandise.html
+++ b/merchandise.html
@@ -62,10 +62,10 @@
 
     <iframe 
               src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-              width="230" 
+              width="495" 
               height="61" 
               frameBorder="0" 
-              scrolling="yes" 
+              scrolling="no" 
               style="border: none;"
             >
           </iframe>
