--- a/settings.html
+++ b/settings.html
@@ -78,11 +78,10 @@
                     <div class="setting-card">
                         <div class="setting-label">
                             <h3 class="setting-title">Profile Status</h3>
-                            <p class="setting-description">Set profile status (Online, Do Not Disturb, Idle, Offline)</p>
+                            <p class="setting-description">Set profile status (Online, Idle, Offline)</p>
                         </div>
                         <select id="profileStatusSelect" class="select-input" disabled>
                             <option value="online">🟢 Online</option>
-                            <option value="dnd">🔴 Do Not Distrub</option>
                             <option value="idle">🟡 Idle</option>
                             <option value="offline">🔘 Offline</option>
                         </select>
