--- a/settings.html
+++ b/settings.html
@@ -131,7 +131,7 @@
     <iframe 
       class="responsive-iframe"
       src="https://bus-army-dude.instatus.com/embed-status/4e365a41/light-lg" 
-      frameBorder="0" 
+      frameborder="0" 
       scrolling="no">
     </iframe>
 
